  * Run autopkgtest tests using autodep8 and the pkg-perl team's
    infrastructure
  * t/img.t: do not spuriously skip
  * tests: consistently use done_testing instead of no_plan
  * Wrap and sort control files (wrap-and-sort -abst)
  * Add enough build-dependencies to run all tests, except for
    non-git VCSs
  * debian/copyright: update for the rename of openid-selector to
    login-selector

 -- Simon McVittie <smcv@debian.org>  Mon, 15 Jun 2015 18:13:23 +0100

ikiwiki (3.20150614) unstable; urgency=medium

  * inline: change default sort order from age to "age title" for
    determinism, partially fixing deterministic build for git-annex,
    ikiwiki-hosting etc. (Closes: #785757)
  * img: avoid ImageMagick misinterpreting filenames containing a colon
  * img test: set old timestamp on source file that will change, so that
    the test will pass even if it takes less than 1 second

 -- Simon McVittie <smcv@debian.org>  Sun, 14 Jun 2015 18:13:23 +0100

ikiwiki (3.20150610) unstable; urgency=low

  [ Joey Hess ]
  * New emailauth plugin lets users log in, without any registration,
    by simply clicking on a link in an email.
  * Re-remove google from openid selector; their openid provider is
    gone for good.
  * Make the openid selector display "Password" instead of "Other"
    when appropriate, so users are more likely to click on it when
    they don't have an openid.
  * Converted openid-selector into a more generic loginselector helper
    plugin.
  * passwordauth: Don't allow registering accounts that look like openids.
  * Make cgiurl output deterministic, not hash order. Closes: #785738
    Thanks, Daniel Kahn Gillmor

  [ Simon McVittie ]
  * Do not enable emailauth by default, to avoid surprises on httpauth-only
    sites. Enable it by default in openid instead, since it is essentially
    a replacement for OpenIDs.
  * Make the attachment plugin work with CGI.pm 4.x (Closes: #786586;
    workaround for #786587 in libcgi-pm-perl)